# alpha2

./: CMakeLists.txt
include/: animationcomponent.hpp  battlestate.hpp  button.hpp  entity.hpp  game.hpp  headers.hpp  menustate.hpp  scoremanager.hpp  state.hpp  statscomponent.hpp
src/: animationcomponent.cpp  battlestate.cpp  button.cpp  entity.cpp  game.cpp  main.cpp  menustate.cpp  scoremanager.cpp  state.cpp  statscomponent.cpp
